[tool.poetry]
name = "test-redis"
version = "0.1.0"
description = ""
authors = ["Nikhil Shinday <nikhil@buildbetter.app>"]
readme = "README.md"
packages = [{include = "test_redis"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
aioredis = "^2.0.1"
uvicorn = "^0.22.0"
openai = "^0.27.6"
typer = "^0.8.0"
websockets = "^11.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
